# data-center-feasibility-app

./: .env.example  .gitignore  DESIGN.md  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: README.md  pyproject.toml
backend/app/: .env.example  analysis.py  main.py  mcp.py  mcp_smoke.py  provider_mcp.py  pydantic_agent.py
backend/app/providers/: api.py  client.py  models.py  registry.py  service.py  texas.py
backend/app/providers/texas_sources/: __init__.py  austin_gis.py  austin_water.py  broadband.py  ercot.py  real_estate.py  travis_parcels.py  twdb.py  txgio.py  web_search.py
backend/tests/: test_analysis_api.py  test_health.py  test_mcp_smoke_api.py  test_provider_mcp.py  test_providers_api.py
backend/tests/providers/: test_broadband.py  test_real_estate.py  test_registry.py  test_travis_parcels.py  test_txgio.py  test_web_search.py
docs/: provider-mcp-implementation.md  texas-data-providers.md
frontend/: README.md  index.html  package-lock.json  package.json  playwright.config.ts
frontend/src/: App.tsx  McpTestPage.tsx  mcpTestTypes.ts  styles.css
frontend/tests/e2e/: feasibility-flow.spec.ts
